# HEA

./: .gitignore  README.md  compile.sh
Input/: cluster.vcl  cluster.vcl~
Input/CYb-Mont/: CYBERSHAKE.n.100.0.dax.dag  CYBERSHAKE.n.100.19.dax.dag  CYBERSHAKE.n.200.0.dax.dag  CYBERSHAKE.n.300.0.dax.dag  CYBERSHAKE.n.400.19.dax.dag  CYBERSHAKE.n.50.0.dax.dag  CYBERSHAKE.n.50.19.dax.dag  CYBERSHAKE.n.500.0.dax.dag  GENOME.d.351024866.19.dax.dag  GENOME.d.702049732.19.dax.dag  GENOME.n.100.0.dax.dag  GENOME.n.100.19.dax.dag  GENOME.n.200.0.dax.dag  GENOME.n.200.19.dax.dag  GENOME.n.300.0.dax.dag  GENOME.n.400.0.dax.dag  GENOME.n.50.0.dax.dag  GENOME.n.50.19.dax.dag  GENOME.n.500.0.dax.dag  LIGO.n.100.0.dax.dag  LIGO.n.100.19.dax.dag  LIGO.n.200.0.dax.dag  LIGO.n.300.0.dax.dag  LIGO.n.400.0.dax.dag  LIGO.n.50.0.dax.dag  LIGO.n.50.19.dax.dag  LIGO.n.500.0.dax.dag  MONTAGE.n.100.0.dax.dag  MONTAGE.n.100.19.dax.dag  MONTAGE.n.200.19.dax.dag  MONTAGE.n.300.19.dax.dag  MONTAGE.n.400.19.dax.dag  MONTAGE.n.50.0.dax.dag  MONTAGE.n.50.19.dax.dag  MONTAGE.n.500.19.dax.dag  Montage_1000.xml.dag  (+9 more)
include/: Chromosome.h  Data.h  HEFT.h  MinMin.h  SimpleRNG.h  cudacode.cu  reference_solution.h
input/: cluster_mini.vcl  mini.dag  miniworkflow.dag
output/: HEA.CyberShake_30.xml.dag.output_file  HEA.CyberShake_50.xml.dag.output_file  HEA.Inspiral_30.xml.dag.output_file  HEA.Inspiral_50.xml.dag.output_file  HEA.Montage_100.xml.dag.output_file  HEA.Montage_50.xml.dag.output_file
setup/: install.sh
source/: CMakeLists.txt  Makefile  hea.cpp  hea.cu
src/: gera_grafos_de_conflito.py
(+33 files in other folders)
